--- a/client/index.html
+++ b/client/index.html
@@ -4,15 +4,17 @@
         <title>WebSocket client</title>
     </head>
     <body>
-        <div class="buttons">
-            <div class="minus button">-</div>
-            <div class="value">?</div>
-            <div class="plus button">+</div>
-        </div>
+        <div id="qrcode"></div>
+        <button id="button" type="button">Clique Para Recarregar QR Code</button>
+        <script src="./js/qrcode.js"></script>
         <script>
             const pingTimeout = 5000;
             const pingInterval = 10000;
             var websocket = new WebSocket("ws://0.0.0.0:8080/websocket");
+            var qrCodeElem = document.getElementById("qrcode");
+            var qrCode = new QRCode(qrCodeElem);
+            var button = document.getElementById("button");
+            button.style.display = "none";
 
             function ping() {
                 if (websocket.readyState === WebSocket.OPEN) {
@@ -41,12 +43,22 @@
                         pong();
                         break;
                     default:
+                        qrCode.makeCode(data);
+                        qrCodeElem.style.display = "initial";
                         console.log(data);
                 }
             };
             websocket.onclose = function (event) {
+                qrCodeElem.style.display = "none";
+                button.style.display = "initial";
                 console.log("Server said Bye!")
             };
+            <!-- TODO: Restart websocket after click button -->
+            <!--button.onclick = function (event) {-->
+                <!--console.log("Sending Another Hello from Client")-->
+                <!--websocket = new WebSocket("ws://0.0.0.0:8080/websocket");-->
+                <!--button.style.display = "none";-->
+            <!--}-->
         </script>
     </body>
 </html>
