--- a/client/public/totp.html
+++ b/client/public/totp.html
@@ -14,7 +14,7 @@
         <h3 id="secret"></h3>
         <script src='dist/easytimer.min.js'></script>
         <script>
-            const backendHost = "localhost:8080";
+            const backendHost = "6b6f7787c931.ngrok.io";
             const key = new URLSearchParams(window.location.search).get('key');
 
             var totpElem = document.getElementById("totp");
